Ship parameters look

--- a/Challenge 1/index.html
+++ b/Challenge 1/index.html
@@ -8,8 +8,84 @@
 		<link href="https://fonts.googleapis.com/css?family=DM+Mono&display=swap" rel="stylesheet">
 	</head>
 	<doby>
+		<h2> Ship parameters</h2>
+		<div class="parameters">
+			<div class="outer">
+				<div class="inner">
+					<div class="value">
+						70% Fuel
+					</div>
+				</div>
+			</div>
+							<div class="effect">
+							<svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="160px" height="160px">
+					         <defs>
+					            <linearGradient id="GradientColor">
+					               <stop offset="0%" stop-color="#e91e63" />
+					               <stop offset="100%" stop-color="#673ab7" />
+					            </linearGradient>
+					         </defs>
+					        <circle cx="80" cy="80" r="70" stroke-linecap="round" />
+				 		</svg> 
+				 	</div>	
+	
+
+			<div class="outer">
+				<div class="inner">
+					<div class="value">
+						100% Throttle
+					</div>
+				</div>
+			</div>
+							<div class="effect2">
+							<svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="160px" height="160px">
+					         <defs>
+					            <linearGradient id="GradientColor">
+					               <stop offset="0%" stop-color="#e91e63" />
+					               <stop offset="100%" stop-color="#673ab7" />
+					            </linearGradient>
+					         </defs>
+					        <circle cx="80" cy="80" r="70" stroke-linecap="round" />
+				 		</svg> 
+				 	</div>	
 
 
-		
+
+			<div class="outer">
+				<div class="inner">
+					<div class="value">
+						4486 km/h
+					</div>
+				</div>
+			</div>
+							<div class="effect3">
+							<svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="160px" height="160px">
+					         <defs>
+					            <linearGradient id="GradientColor">
+					               <stop offset="0%" stop-color="#e91e63" />
+					               <stop offset="100%" stop-color="#673ab7" />
+					            </linearGradient>
+					         </defs>
+					        <circle cx="80" cy="80" r="70" stroke-linecap="round" />
+				 		</svg> 
+				 	</div>	
+
+		</div>
+
+
+
+
+
+		<!--I will devide the different information 
+		<h2> Ship Enviroment</h2>
+		<div class= "enviroment">
+		</div>
+
+		<h2> Ship Supplies</h2>
+		<h2> Ship Metrics</h2>
+		-->
+
+
+
 		<script src="scripts/main.js"></script>
 	</doby>
