--- a/Challenge 1/index.html
+++ b/Challenge 1/index.html
@@ -29,7 +29,7 @@
 					</div>
 				</div>
 			</div>
-							<div class="effect">
+						<div class="effect">
 							<svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="160px" height="160px">
 					         <defs>
 					            <linearGradient id="GradientColor">
@@ -87,11 +87,29 @@
 					<div class="inner">
 						<div class="fuel-ship">
 							<p><p>
-							<p id="damage">-</p>
+							<p id="taken-dmg">-</p>
 						</div>
 					</div>
 				</div>
-				<div class="effect4">
+					<div class="effect4">
+								<svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="160px" height="160px">
+						         <defs>
+						            <linearGradient id="GradientColor">
+						               <stop offset="0%" stop-color="#e91e63" />
+						               <stop offset="100%" stop-color="#673ab7" />
+						            </linearGradient>
+						         </defs>
+						        <circle cx="80" cy="80" r="70" stroke-linecap="round" />
+					 		</svg> 
+				 	</div>
+				 	<div class="outer">
+				 		<div class="ïnner">
+				 			<div class="throttle-ship" >
+								<p id="gravity-cap">-</p>
+			            	</div>
+				 		</div>
+				 	</div>
+				 	<div class="effect5">
 							<svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="160px" height="160px">
 					         <defs>
 					            <linearGradient id="GradientColor">
@@ -102,51 +120,52 @@
 					        <circle cx="80" cy="80" r="70" stroke-linecap="round" />
 				 		</svg> 
 				 	</div>
+				 	<div class="outer">
+				 		<div class="ïnner">
+				 			<div class="acceleration-ship">
+				                <p id="temperature"></p>
+			                </div>
+				 		</div>
+				 	</div>
+				 	<div class="effect6">
+							<svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="160px" height="160px">
+					         <defs>
+					            <linearGradient id="GradientColor">
+					               <stop offset="0%" stop-color="#e91e63" />
+					               <stop offset="100%" stop-color="#673ab7" />
+					            </linearGradient>
+					         </defs>
+					        <circle cx="80" cy="80" r="70" stroke-linecap="round" />
+				 		</svg> 
+				 	</div>
+			 </div>
 
-	            <div class="throttle-ship" >
-	                <h3>Oxygen Capacity:</h3>
-	                <p id="oxygen-cap">-</p>
-	            </div>
-	            <div class="speed-ship" >
-	                <h3>Engine Fluids:</h3>
-	                <p id="speed">-</p>
-	            </div>
-	            <div class="acceleration-ship">
-	                <h3>Temperature:</h3>
-	                <p id="temperature"></p>
-	            </div>
-        </div>
 
-        <div class="ship-eviroment">
-	            <div class="power-usage" >
-	                <h3>Electricity Usage:</h3>
-	                <p id="power">-</p>
-	            </div>
-	            <div class="gravity-ship" >
-	                <h3>Gravitational waves:</h3>
-	                <p id="gravity">-</p>
-	            </div>
-	            <div class="gravity-converter" >
-	                <h3>Mission Outcome</h3>
-	                <p id="outcome">-</p>
-	            </div>
-        </div>
 
-        <div class="ship-supplies">
-	            <div class="food-ship" >
-	                <h3>Food availability:</h3>
-	                <p id="food">-</p>
-	            </div>
-	            <div class="water-ship" >
-	                <h3>Water availability:</h3>
-	                <p id="water">-</p>
-	            </div>
-	            <div class="mars-ship" >
-	                <h3>Miles to Mars:</h3>
+		       
+			 <!-- <div class="ship-eviroment">
+			            <div class="gravity-converter" >
+			                <h3>Mission Outcome</h3>
+			                <p id="outcome">-</p>
+			            </div>
+		        </div>  -->
 
-	                <p id="mars">-</p>
-	            </div>
-        </div>
+
+		        <div class="ship-supplies">
+			            <div class="food-ship" >
+			                <h3>Food availability:</h3>
+			                <p id="food">-</p>
+			            </div>
+			            <div class="water-ship" >
+			                <h3>Water availability:</h3>
+			                <p id="water">-</p>
+			            </div>
+			            <div class="mars-ship" >
+			                <h3>Miles to Mars:</h3>
+			                <p id="distance-mars">-</p>
+			            </div>
+		        </div>
+
    
 
 
