moved index so I can host

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 		<title>Assingment 1</title>
-		<link rel="stylesheet" href="styles/mystyle.css">
+		<link rel="stylesheet" href="challenge1/styles/mystyle.css">
 	</head>
 	<doby>
 
 			<div class="bg-video">
 				<video autoplay muted loop>
-					<source src="assets/bg-vid.mp4" type="video/mp4">
+					<source src="challenge1/assets/bg-vid.mp4" type="video/mp4">
 				</video>
 			</div>
 
@@ -138,8 +138,6 @@
 			 </div>
 
 
-
-
 		        <div class="ship-supplies">
 			            <div class="food-ship" >
 			                <h3>Food availability:</h3>
@@ -155,24 +153,7 @@
 			            </div>
 		        </div>
 
-   
+  
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-		<script src="scripts/main.js"></script>
+		<script src="challenge1/scripts/main.js"></script>
 	</doby>
